--- a/src/scss/layout/sections/_content.scss
+++ b/src/scss/layout/sections/_content.scss
@@ -4,8 +4,8 @@
 	background-color: $content-color;
 	margin: $page-padding auto;
 	min-width: 500px;
-	max-width: 1200px;
-	width: 55%;
+	max-width: 900px;
+	width: 60%;
 
 	border-radius: 4px;
 	box-shadow: 2px 2px 6px rgba(71, 71, 71, 0.5);
