--- a/src/scss/modules/_navigation.scss
+++ b/src/scss/modules/_navigation.scss
@@ -8,7 +8,7 @@
 	}
 
 	li{
-		font-size: 12px;
+		font-size: 13px;
 		vertical-align: bottom;
 	}
 
